--- a/testrecorder-agent/pom.xml
+++ b/testrecorder-agent/pom.xml
@@ -100,6 +100,12 @@
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
@@ -109,7 +115,7 @@
 		<dependency>
 			<groupId>net.amygdalum</groupId>
 			<artifactId>xrayinterface</artifactId>
-			<version>0.3.1</version>
+			<version>0.3.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
