--- a/testrecorder-runtime/pom.xml
+++ b/testrecorder-runtime/pom.xml
@@ -72,6 +72,12 @@
 			<scope>test</scope>
 		</dependency>
         <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.tngtech.archunit</groupId>
             <artifactId>archunit</artifactId>
             <version>0.9.3</version>
@@ -86,7 +92,7 @@
 		<dependency>
 			<groupId>net.amygdalum</groupId>
 			<artifactId>xrayinterface</artifactId>
-			<version>0.3.1</version>
+			<version>0.3.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
