--- a/testrecorder-bridge/pom.xml
+++ b/testrecorder-bridge/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>net.amygdalum</groupId>
 		<artifactId>testrecorder</artifactId>
-		<version>0.10.1-SNAPSHOT</version>
+		<version>0.10.1</version>
 	</parent>
 	<artifactId>testrecorder-bridge</artifactId>
 	<name>${project.groupId}:${project.artifactId}</name>
