--- a/testrecorder-agent/pom.xml
+++ b/testrecorder-agent/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>net.amygdalum</groupId>
 		<artifactId>testrecorder</artifactId>
-		<version>0.10.3</version>
+		<version>0.10.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>testrecorder-agent</artifactId>
 	<name>${project.groupId}:${project.artifactId}</name>
