--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>net.amygdalum</groupId>
 	<artifactId>testrecorder</artifactId>
-	<version>0.10.4</version>
+	<version>0.10.5-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>${project.groupId}:${project.artifactId}</name>
@@ -28,7 +28,7 @@
 		<connection>scm:git:git@github.com:almondtools/testrecorder.git</connection>
 		<developerConnection>scm:git:git@github.com:almondtools/testrecorder.git</developerConnection>
 		<url>git@github.com:almondtools/testrecorder.git</url>
-		<tag>testrecorder-0.10.4</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<distributionManagement>
 		<snapshotRepository>
