--- a/testrecorder-annotations/pom.xml
+++ b/testrecorder-annotations/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>net.amygdalum</groupId>
 		<artifactId>testrecorder</artifactId>
-		<version>0.10.5-SNAPSHOT</version>
+		<version>0.10.5</version>
 	</parent>
 	<artifactId>testrecorder-annotations</artifactId>
 	<name>${project.groupId}:${project.artifactId}</name>
